adding returnOutputNeuron function in Neurons and editing BackPropagation to include returnOutputNeuron